--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -1,9 +1,13 @@
 on: [issues, pull_request]
 jobs:
-  sync-labels:
-    runs-on: ubuntu-latest
-    name: Sync repository labels
-    steps:
-      - uses: adityaviswanathan/labelmaker@v1
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+    sync-labels:
+        runs-on: ubuntu-latest
+        name: Sync repository labels
+        steps:
+            - uses: actions/checkout@v2
+            - uses: actions/setup-node@v1
+            - run: npm install
+            - run: npm test
+            - uses: adityaviswanathan/labelmaker@v1
+              with:
+                github-token: ${{ secrets.GITHUB_TOKEN }}
